fix(#8 - Text formatting) - Respect whitespace on long form text entry
Now the following fields respect whitespace
- Work Description
- Work order notes
- Vehicle notes
- Inspection item notes
- Canned response

--- a/src/app/inspections/inspection-detail/inspection-detail.component.scss
+++ b/src/app/inspections/inspection-detail/inspection-detail.component.scss
@@ -12,10 +12,6 @@
 		}
 	}
 
-	.long-text {
-		width: 600px;
-	}
-
 	::ng-deep {
 		.mat-card-header-text {
 			width: 100%;
