--- a/src/app/shared/customer-vehicle-summary/customer-vehicle-summary.component.scss
+++ b/src/app/shared/customer-vehicle-summary/customer-vehicle-summary.component.scss
@@ -10,7 +10,3 @@
 	margin-bottom: -5px;
 	margin-left: 5px;
 }
-
-.long-text {
-	width: 600px;
-}
