--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,6 +19,10 @@ body {
 	visibility: hidden;
 }
 
+.ma-respect-whitespace {
+	white-space: pre-line;
+}
+
 @media print {
 	.ma-print-version-only {
 		visibility: visible;
